Fix styles of Banner and make it always visible (#306)

--- a/src/components/PageLayout/Banner/Banner.module.scss
+++ b/src/components/PageLayout/Banner/Banner.module.scss
@@ -5,16 +5,15 @@
   border: none;
   display: flex;
   align-items: center;
-  padding: 0px;
   z-index: 3;
   margin-bottom: 0.5rem;
-  padding: 0.2rem;
+  padding: 0.2rem 0;
 }
 
 
 .marqueeTextContainer {
   white-space: nowrap;
-  padding: 0px;
+  padding: 0;
   height: 100%;
   display: flex;
   align-items: center;
